--- a/styles/home.css
+++ b/styles/home.css
@@ -1,8 +1,8 @@
-.container {
-  padding: 0 2rem;
+.home__container {
+  width: 100vw;
 }
 
-.main {
+.home__main {
   min-height: 100vh;
   padding: 4rem 0;
   flex: 1;
@@ -12,7 +12,7 @@
   align-items: center;
 }
 
-.footer {
+.home__footer {
   display: flex;
   flex: 1;
   padding: 2rem 0;
@@ -21,7 +21,7 @@
   align-items: center;
 }
 
-.footer a {
+.home__footer a {
   display: flex;
   justify-content: center;
   align-items: center;
