--- a/styles/home.css
+++ b/styles/home.css
@@ -4,12 +4,12 @@
 
 .home__main {
   min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+  /* padding: 4rem 0; */
+  /* flex: 1; */
+  width: 100vw;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .home__footer {
@@ -26,6 +26,29 @@
   justify-content: center;
   align-items: center;
   flex-grow: 1;
+}
+
+.home__heading {
+  font-size: 36px;
+  font-weight: 500;
+}
+
+.home__description {
+  margin-top: 8vh;
+}
+
+.home__left-side {
+  margin-left: 12vw;
+  margin-top: 12vh;
+  width: 40vw;
+}
+
+.home__button {
+  margin-top: 20vh;
+  padding: 1rem 2rem;
+  background-color: #53301D;
+  color: white;
+  border: none;
 }
 
 .title a {
