--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,700');
 @import url('./home.css');
 @import url('./navbar.css');
+@import url('./about.css');
+@import url('./footer.css');
 
 html,
 body {
@@ -10,6 +12,13 @@ body {
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: #fff4ee;
   color: #53301D;
+}
+
+:root{
+  --primary-pink: #FFCFD1;
+  --primary-brown: #53301D;
+  --secondary-brown: rgba(83, 48, 29, 0.68);
+  --tertiary-brown: rgba(255, 239, 229, 1);
 }
 
 a {
