--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,8 +8,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Poppins';
   background-color: #fff4ee;
   color: #53301D;
 }
