about done some changes to be made

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,7 @@
 @import url('./navbar.css');
 @import url('./about.css');
 @import url('./footer.css');
+@import url('./team.css');
 
 html,
 body {
