--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@
 @import url('./about.css');
 @import url('./footer.css');
 @import url('./team.css');
+@import url('./drives.css');
 
 html,
 body {
