--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -27,8 +27,24 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 24%;
+  width: 36%;
   margin-right: 6vw;
+}
+
+.navbar__burger {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 40px;
+  height: 28px;
+}
+
+.navbar__burger-line {
+  height: 3px;
+  width: 100%;
+  background-color: var(--primary-brown);
+
 }
 
 .navbar__dot {
