--- a/styles/missioncard.css
+++ b/styles/missioncard.css
@@ -18,13 +18,14 @@
 }
 
 .mission-card-description {
-  font-size: 16px;
+  font-size: 12px;
   color: #876450;
   font-weight: 500;
   margin-top: 2vh;
-  margin-left: 1.5vw;
-  margin-right: 1.5vw;
-  text-align: center;
+  text-align: justify;
+  margin-left: 40px;
+  margin-right: 40px;
+  /* text-align: center; */
 }
 
 .mission-card-more {
@@ -36,11 +37,11 @@
   color: #876450;
   font-weight: 500;
   font-size: 16px;
-  margin-top: 6vh;
+  margin-top: 8vh;
 }
 
 .mission-card-title {
-  font-size: 28px;
+  font-size: 22px;
   font-weight: 600;
   margin: 0;
 }
