--- a/styles/drives.css
+++ b/styles/drives.css
@@ -61,6 +61,13 @@
 	flex-wrap: wrap;
 }
 
+.images-drives{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+}
+
 .images-drives > span {
 	margin: 10px;
 }
