--- a/styles/home.css
+++ b/styles/home.css
@@ -1,36 +1,36 @@
 .home__container {
-	width: 100vw;
+  width: 100vw;
 }
 
 .home__main {
-	min-height: 100vh;
-	/* padding: 4rem 0; */
-	/* flex: 1; */
-	width: 100vw;
-	display: flex;
-	flex-direction: column;
-	/* align-items: center; */
+  min-height: 100vh;
+  /* padding: 4rem 0; */
+  /* flex: 1; */
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
 }
 
 .home__footer {
-	display: flex;
-	flex: 1;
-	padding: 2rem 0;
-	border-top: 1px solid #eaeaea;
-	justify-content: center;
-	align-items: center;
+  display: flex;
+  flex: 1;
+  padding: 2rem 0;
+  border-top: 1px solid #eaeaea;
+  justify-content: center;
+  align-items: center;
 }
 
 .home__footer a {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
 }
 
 .home__heading {
-	font-size: 36px;
-	font-weight: 500;
+  font-size: 36px;
+  font-weight: 500;
 }
 
 /* .home__hr {
@@ -43,199 +43,216 @@
  } */
 
 .home__description {
-	margin-top: 8vh;
+  margin-top: 8vh;
 }
 
 .home__left-side {
-	width: 35vw;
-	margin-top: -16vh;
+  width: 35vw;
+  margin-top: -16vh;
 }
 
 .home__landing {
-	margin-left: 8vw;
-	margin-right: 8vw;
-	/* margin-top: 5vh; */
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
+  margin-left: 8vw;
+  margin-right: 8vw;
+  /* margin-top: 5vh; */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .home__button {
-	margin-top: 20vh;
-	padding: 1rem 2rem;
-	background-color: #53301d;
-	color: white;
-	border: none;
-	cursor: pointer;
+  margin-top: 20vh;
+  padding: 1rem 2rem;
+  background-color: #53301d;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.home__image-container {
+  width: 36vw;
+  height: 100vh;
+  margin-top: 10vh;
 }
 
 .home__image {
-	width: 36vw;
-	height: 100vh;
-	margin-top: 10vh;
+  object-fit: cover;
 }
 
 .home__socials {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-	width: 24vw;
-	margin-top: 8vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 24vw;
+  margin-top: 8vh;
 }
 
 .home__about {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	align-items: center;
-	width: 84vw;
-	height: 70vh;
-	margin-top: 20vh;
-	align-self: center;
-	background-color: var(--tertiary-brown);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 84vw;
+  height: 70vh;
+  margin-top: 20vh;
+  align-self: center;
+  background-color: var(--tertiary-brown);
+}
+
+.home__about-image-container {
+  max-width: 24vw;
+  height: 70vh;
 }
 
 .home__about-image {
-	width: 24vw;
-	height: 70vh;
+  object-fit: cover;
+  max-width: 24vw;
+  max-height: 70vh;
 }
 
 .home__about-title {
-	font-size: 32px;
-	font-weight: 600;
+  font-size: 32px;
+  font-weight: 600;
 }
 
 .home__about-description {
-	font-size: 15px;
-	color: #876450;
-	font-weight: 500;
-	margin-top: 40px;
+  font-size: 15px;
+  color: #876450;
+  font-weight: 500;
+  margin-top: 40px;
 }
 
 .home__about-btn {
-	padding: 1rem 2rem;
-	background-color: #53301d;
-	color: white;
-	border: none;
-	cursor: pointer;
-	margin-top: 60px;
+  padding: 1rem 2rem;
+  background-color: #53301d;
+  color: white;
+  border: none;
+  cursor: pointer;
+  margin-top: 60px;
 }
 
 .home__about-info {
-	width: 50%;
-	margin-right: 4vw;
+  width: 50%;
+  margin-right: 4vw;
 }
 
 .home__mission {
-	margin-top: 20vh;
-	width: 84vw;
-	margin-left: 8vw;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+  margin-top: 20vh;
+  width: 84vw;
+  margin-left: 8vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .home__mission-title {
-	font-size: 32px;
-	font-weight: 600;
+  font-size: 32px;
+  font-weight: 600;
 }
 
 .home__mission-cards {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-wrap: wrap;
-	width: 84vw;
-	margin: 10px;
-	margin-top: 8vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 84vw;
+  margin: 10px;
+  margin-top: 8vh;
 }
 
 .title a {
-	color: #0070f3;
-	text-decoration: none;
+  color: #0070f3;
+  text-decoration: none;
 }
 
 .title a:hover,
 .title a:focus,
 .title a:active {
-	text-decoration: underline;
+  text-decoration: underline;
 }
 
 .title {
-	margin: 0;
-	line-height: 1.15;
-	font-size: 4rem;
+  margin: 0;
+  line-height: 1.15;
+  font-size: 4rem;
 }
 
 .title,
 .description {
-	text-align: center;
+  text-align: center;
 }
 
 .description {
-	margin: 4rem 0;
-	line-height: 1.5;
-	font-size: 1.5rem;
+  margin: 4rem 0;
+  line-height: 1.5;
+  font-size: 1.5rem;
 }
 
 .code {
-	background: #fafafa;
-	border-radius: 5px;
-	padding: 0.75rem;
-	font-size: 1.1rem;
-	font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-		Bitstream Vera Sans Mono, Courier New, monospace;
+  background: #fafafa;
+  border-radius: 5px;
+  padding: 0.75rem;
+  font-size: 1.1rem;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 .grid {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-wrap: wrap;
-	max-width: 800px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 800px;
 }
 
 .card {
-	margin: 1rem;
-	padding: 1.5rem;
-	text-align: left;
-	color: inherit;
-	text-decoration: none;
-	border: 1px solid #eaeaea;
-	border-radius: 10px;
-	transition: color 0.15s ease, border-color 0.15s ease;
-	max-width: 300px;
+  margin: 1rem;
+  padding: 1.5rem;
+  text-align: left;
+  color: inherit;
+  text-decoration: none;
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
+  transition: color 0.15s ease, border-color 0.15s ease;
+  max-width: 300px;
 }
 
 .card:hover,
 .card:focus,
 .card:active {
-	color: #0070f3;
-	border-color: #0070f3;
+  color: #0070f3;
+  border-color: #0070f3;
 }
 
 .card h2 {
-	margin: 0 0 1rem 0;
-	font-size: 1.5rem;
+  margin: 0 0 1rem 0;
+  font-size: 1.5rem;
 }
 
 .card p {
-	margin: 0;
-	font-size: 1.25rem;
-	line-height: 1.5;
+  margin: 0;
+  font-size: 1.25rem;
+  line-height: 1.5;
 }
 
 .logo {
-	height: 1em;
-	margin-left: 0.5rem;
+  height: 1em;
+  margin-left: 0.5rem;
 }
 
 @media (max-width: 600px) {
-	.grid {
-		width: 100%;
-		flex-direction: column;
+  .grid {
+    width: 100%;
+    flex-direction: column;
+  }
+}
+
+
+@media screen and (max-width: 1280px) {
+  .home__socials {
+		width: 30vw;
 	}
 }
