--- a/styles/footer.css
+++ b/styles/footer.css
@@ -114,6 +114,7 @@ textarea {
 		height: fit-content;
 		flex-direction: column;
 		align-items: center;
+		padding: 30px;
 	}
 
 	.footer__main-details {
