--- a/styles/about.css
+++ b/styles/about.css
@@ -1,47 +1,61 @@
 .about__main-photo,
 .drives__main-photo,
 .bifrost__main-photo {
-  background-image: linear-gradient(
-      rgba(83, 48, 29, 0.68),
-      rgba(52, 52, 52, 0.74)
-    ),
-    url(https://discord.com/channels/@me/780471839193432104/973645866957144065);
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
+	background-image: linear-gradient(
+			rgba(83, 48, 29, 0.68),
+			rgba(52, 52, 52, 0.74)
+		),
+		url(https://discord.com/channels/@me/780471839193432104/973645866957144065);
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	text-align: center;
+	justify-content: center;
 }
 
 .about__main-heading,
 .drives__main-heading,
 .bifrost__main-heading {
-  font-size: 68px;
-  color: var(--primary-pink);
+	font-size: 68px;
+	color: var(--primary-pink);
 }
 
 .about__main-note {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .about__main-note-box {
-  background-color: var(--tertiary-brown);
-  height: auto;
-  width: 80%;
-  margin: 20px;
-  border-radius: 10px;
-  padding: 20px;
-  padding: 10px 50px 25px 50px;
-  text-align: center;
+	background-color: var(--tertiary-brown);
+	height: auto;
+	width: 80%;
+	margin: 20px;
+	border-radius: 10px;
+	padding: 20px;
+	padding: 10px 50px 25px 50px;
+	text-align: center;
 }
 
 .about__main-note-p {
-  color: var(--secondary-brown);
-  text-align: left;
-  font-size: 16px;
-  padding-top: 10px;
-  line-height: 29px;
+	color: var(--secondary-brown);
+	text-align: left;
+	font-size: 16px;
+	padding-top: 10px;
+	line-height: 29px;
+}
+
+@media screen and (max-width: 480px) {
+	.about__main-note-box {
+		width: 100%;
+		margin: 10px;
+		padding: 20px;
+		margin-top: -100;
+	}
+
+	.about__main-note-p {
+		font-size: 12px;
+		line-height: 20px;
+	}
 }
