--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@
 @import url('./team.css');
 @import url('./drives.css');
 @import url('./bifrost.css');
+@import url('./slider.css');
 
 html,
 body {
